@startuml

User "1" o-- "0..n" Listing
Category "1" *-- "0..n" Listing
package "User Service" {
UserService --> User
UserService --> UserMessage
UserService --> VerifyID
}

package "Product Service" {
ProductService --> Listing
ProductService --> Category
ProductService --> ProductMessage
}

UserMessage ..|> Message
ProductMessage ..|> Message


class User {
    +id: Interger
    +name: String
}

class Listing {
    +id: Interger
    +title: String
    +description: String
    +price: Interger
    +username: String
    +createtime: Date
}

class Category {
    +id: Interger
    +name: String
    -list: Object
}

class VerifyID {
    -doCaseInsensitive(name: String): String
    -isExisted(name: String): Bool
}

class UserService {
    +Register(username: String): Message
}

class ProductService {
    +createListing(): Message
    +deleteListing(): Message
    +getListing(): Message
    +getCategory(): Message
    +getTopCategory(): Message
}

interface Message {
    +Success()
    +Error()
}

class UserMessage {
    -Success()
    -Error()
}

class ProductMessage {
    -Success()
    -Error()
}


enum Status {

}

@enduml